Fixed bug in colour contrast

--- a/_sass/layout.scss
+++ b/_sass/layout.scss
@@ -15,6 +15,8 @@
  */
 body {
     overflow: hidden;
+    background: $bg;
+    color: $fg;
 }
 #maincontainer {
     max-height: 100vh;
